Coding Together Session #2: small changed to HtmlParser